[gd_scene load_steps=3 format=2]

[ext_resource path="res://QuestGraph.gd" type="Script" id=1]
[ext_resource path="res://questStepNode.tscn" type="PackedScene" id=2]

[node name="QuestGraph" type="GraphEdit"]
margin_right = 947.997
margin_bottom = 607.0
right_disconnects = true
use_snap = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="questStepNode" parent="." instance=ExtResource( 2 )]
margin_right = 133.0
margin_bottom = 87.0
mouse_filter = 1
[connection signal="_end_node_move" from="." to="." method="_on_QuestGraph__end_node_move"]
[connection signal="connection_request" from="." to="." method="_on_QuestGraph_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_QuestGraph_connection_to_empty"]
[connection signal="delete_nodes_request" from="." to="." method="_on_QuestGraph_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_QuestGraph_disconnection_request"]
